force-app/main/default/objects/EYI_Lead_Enquiry_Escalation_Settings__mdt/EYI_Lead_Enquiry_Escalation_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This custom setting is used to store the Lead Enquiry escalation minutes.</description>
    <label>Escalation TAT Settings</label>
    <pluralLabel>Escalation TAT Settings</pluralLabel>
</CustomObject>