force-app/main/default/objects/EYI_Lead_Enquiry_Escalation_Settings__mdt/fields/L2_Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>L2_Escalation_Time__c</fullName>
    <label>L2 Escalation Time (Min.)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>