force-app/main/default/objects/EYI_Lead_Enquiry_Escalation_Settings__mdt/fields/Where_It_Is_Used__c.field-meta.xml
<CustomField>
    <fullName>Where_It_Is_Used__c</fullName>
    <label>Where It Is Used</label>
    <type>TextArea</type>
</CustomField>